병합해서 새로 적용

--- a/src/main/resources/templates/thymeleaf/main.html
+++ b/src/main/resources/templates/thymeleaf/main.html
@@ -9,29 +9,10 @@
 
 <body>
 	<h2>directory : src/main/resources/templates/thymeleaf/main.html</h2>
-	<h2>html</h2>
-	<!-- <a href="/codingrecipe/home">codingrecipe : board</a> -->
+	
+	<h2>목록</h2>
+	<a href="/greencode/home">yoytube greencode</a>
 	<!-- <a href="/metacoding/home">metacoding : blog</a> -->
 </body>
 
 </html>
-
-
-
-
-=======
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>title</title>
-</head>
-<body>
-	<h2>Main thymeleaf</h2>
-	<a href="/greencode/home">YOUTUBE 그린코드</a>
-	<br>
-	<a href="#">스터디별 내용</a>
-</body>
-</html>
->>>>>>> branch 'main' of https://github.com/dollerpeak/springboot-react.git
