--- a/src/main/resources/templates/thymeleaf/greencode/home.html
+++ b/src/main/resources/templates/thymeleaf/greencode/home.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>title</title>
+	<title>home</title>
 </head>
+
 <body>
-	<h2>YOUTUBE 그린코드, Home thymeleaf</h2>
+	<h2>youtube greencode</h2>
 </body>
+
 </html>
