--- a/src/main/resources/templates/thymeleaf/greencode/test/html.html
+++ b/src/main/resources/templates/thymeleaf/greencode/test/html.html
@@ -23,8 +23,11 @@
 		}
 	</style> -->
 	
+	<!-- bootstrap -->
+	<!-- <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- 외부스타일 -->
-	<link rel="stylesheet" href="style.css">
+	<link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -61,7 +64,26 @@
 			<button type="submit">등록</button>
 		</form>		
 	</div>
-	
+
+	<br><br>
+	<div class="card text-center">
+		<div class="card-header">
+			bootstrap
+		</div>
+		<div class="card-body">
+			<h5 class="card-title">Special title treatment</h5>
+			<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+			<a href="#" class="btn btn-primary">Go somewhere</a>
+		</div>
+		<div class="card-footer text-body-secondary">
+			2 days ago
+		</div>
+	</div>
+
+	<!-- bootstrap -->
+	<!-- <script src="/js/bootstrap/bootstrap.bundle.min.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="./js.js"></script>
 </body>
 
 </html>
