--- a/src/main/resources/templates/thymeleaf/greencode/test/test.html
+++ b/src/main/resources/templates/thymeleaf/greencode/test/test.html
@@ -27,7 +27,7 @@
 	<!-- <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- 외부스타일 -->
-	<link href="./style.css" rel="stylesheet">
+	<link href="./test.css" rel="stylesheet">
 </head>
 
 <body>
@@ -84,7 +84,7 @@
 	<!-- bootstrap -->
 	<!-- <script src="/js/bootstrap/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="./js.js"></script>
+	<script src="./test.js"></script>
 </body>
 
 </html>
