springboot aloha home페이지 추가

--- a/src/main/resources/templates/thymeleaf/main.html
+++ b/src/main/resources/templates/thymeleaf/main.html
@@ -11,7 +11,12 @@
 	<h2>directory : src/main/resources/templates/thymeleaf/main.html</h2>
 	
 	<h2>목록</h2>
-	<a href="/greencode/home">yoytube greencode</a>
+	<a href="/greencode/home">
+		<h3>yoytube greencode</h3>
+	</a>
+	<a href="/aloha/home">
+		<h3>yoytube aloha</h3>
+	</a>
 	<!-- <a href="/metacoding/home">metacoding : blog</a> -->
 </body>
 
