aloha board 진행중

--- a/src/main/resources/templates/thymeleaf/main.html
+++ b/src/main/resources/templates/thymeleaf/main.html
@@ -12,10 +12,10 @@
 	
 	<h2>목록</h2>
 	<a href="/greencode/home">
-		<h3>yoytube greencode</h3>
+		<h3>youtube greencode</h3>
 	</a>
 	<a href="/aloha/home">
-		<h3>yoytube aloha</h3>
+		<h3>youtube aloha</h3>
 	</a>
 	<!-- <a href="/metacoding/home">metacoding : blog</a> -->
 </body>
