--- a/src/main/resources/templates/thymeleaf/aloha/blog/main.html
+++ b/src/main/resources/templates/thymeleaf/aloha/blog/main.html
@@ -17,6 +17,16 @@
 	<a href="/aloha/blog/insert">작성</a>
 	</br>
 	<a href="/aloha/blog/update">수정</a>
+
+	</br></br>
+	<h2>rest</h2>
+	<a href="/aloha/rest/blog">목록</a>
+	</br>
+	<a href="/aloha/rest/blog/30">상세</a>
+	</br>
+	<a href="/aloha/rest/blog/insert">작성</a>
+	</br>
+	<a href="/aloha/rest/blog/update">수정</a>
 	
 	
 </body>
