--- a/src/main/resources/templates/thymeleaf/aloha/home.html
+++ b/src/main/resources/templates/thymeleaf/aloha/home.html
@@ -8,7 +8,7 @@
 	
 	<!-- bootstrap -->
 	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-	<link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+	<link href="/css/bootstrap-5.3.5/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
 	<!-- bootstrap -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script> -->
-	<script src="/js/bootstrap/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="/js/bootstrap-5.3.5/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
