--- a/src/main/resources/templates/thymeleaf/aloha/test/board/index.html
+++ b/src/main/resources/templates/thymeleaf/aloha/test/board/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>board</title>
 	
-	<!-- <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
+	<!-- <link href="/css/bootstrap-5.3.5/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -197,7 +197,7 @@
 
 		}
 	</script>
-	<!-- <script src="/js/bootstrap/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script> -->
+	<!-- <script src="/js/bootstrap-5.3.5/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script> -->
 
 </body>
 
