--- a/src/main/resources/templates/thymeleaf/greencode/test/calc.html
+++ b/src/main/resources/templates/thymeleaf/greencode/test/calc.html
@@ -7,7 +7,7 @@
 	<title>calc</title>
 
 	<!-- bootstrap -->
-	<!-- <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
+	<!-- <link href="/css/bootstrap-5.3.5/bootstrap.min.css" rel="stylesheet"> -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
 	<!-- 외부스타일 -->
 	<link href="./calc.css" rel="stylesheet">
@@ -66,7 +66,7 @@
 	</div>
 
 	<!-- bootstrap -->
-	<!-- <script src="/js/bootstrap/bootstrap.bundle.min.js"></script> -->
+	<!-- <script src="/js/bootstrap-5.3.5/bootstrap.bundle.min.js"></script> -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="./calc.js"></script>
 </body>
