multipart 파일업로드 완료

--- a/src/main/resources/templates/thymeleaf/aloha/blog/main.html
+++ b/src/main/resources/templates/thymeleaf/aloha/blog/main.html
@@ -24,10 +24,18 @@
 	</br>
 	<a href="/aloha/rest/blog/30">상세</a>
 	</br>
+	<!-- 
 	<a href="/aloha/rest/blog/insert">작성</a>
 	</br>
 	<a href="/aloha/rest/blog/update">수정</a>
-	
+	 -->
+	 
+	</br></br>
+	<h2>multipart test</h2>
+	<a href="/aloha/blog/multipart/select">목록</a>
+	 
+	 
+	 
 	
 </body>
 </html>
