--- a/src/main/resources/templates/thymeleaf/aloha/blog/multipart/insert.html
+++ b/src/main/resources/templates/thymeleaf/aloha/blog/multipart/insert.html
@@ -9,21 +9,6 @@
 	<h1>작성</h1>
 	<a href="/aloha/blog">뒤로</a> </br>
 	</br></br>
-	
-	<!-- 
-	<form action="/aloha/blog/multipart/insert" method="post">
-		<input type="hidden" name="id" id="id" value="0">
-		<input type="number" name="id" id="id" value="0" style="display: none">		
-		<label>제목</label>
-		<input type="text" name="title" id="title"></br>
-		<label>작성자</label>
-		<input type="text" name="writer" id="writer"></br>
-		<label>내용</label>
-		<input type="text" name="content" id="content"></br>
-		<input type="text" name="content" id="content"></br>
-		<input type="submit" value="등록">
-	</form>
-	 -->
 
 	<form action="/aloha/blog/multipart/insert" method="POST" id="form" enctype="multipart/form-data">
 		<table>
@@ -41,7 +26,7 @@
 			</tr>
 			<tr>
 				<td>파일</td>
-				<td><input type="file" name="fileList" multiple></td>
+				<td><input type="file" name="multipartFileList" multiple></td>
 			</tr>
 		</table>
 		<div>
