--- a/src/main/resources/templates/thymeleaf/aloha/blog/select.html
+++ b/src/main/resources/templates/thymeleaf/aloha/blog/select.html
@@ -16,7 +16,7 @@
 			<th>제목</th>
 			<th>작성자</th>
 			<th>글내용</th>
-			<th>조회수</th>
+			<th>첨부파일갯수</th>
 			<th>등록일자</th>
 			<th>등록자</th>
 			<th>수정일자</th>
@@ -32,7 +32,7 @@
 			</td>
 			<td th:text="${blog.writer}"></td>
 			<td th:text="${blog.contents}"></td>
-			<td th:text="${blog.hits}"></td>
+			<td th:text="${blog.attachCount}"></td>
 			<td th:text="${blog.frstRegDate}"></td>
 			<td th:text="${blog.frstRegUserId}"></td>
 			<td th:text="${blog.lastChgDate}"></td>
